Disable CONFIG_UNWINDER_ORC
CONFIG_UNWINDER_ORC makes go/ab to fail with
Cannot generate ORC metadata for CONFIG_UNWINDER_ORC=y, please install libelf-dev, libelf-devel or elfutils-libelf-devel"

Bug: 111742629
Change-Id: Ifa67e943ed15785a050959079be48d85e0616400
Signed-off-by: Roman Kiryanov <rkir@google.com>

--- a/arch/x86/configs/x86_64_ranchu_defconfig
+++ b/arch/x86/configs/x86_64_ranchu_defconfig
@@ -452,6 +452,7 @@ CONFIG_SCHEDSTATS=y
 CONFIG_SCHED_TRACER=y
 CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_PROVIDE_OHCI1394_DMA_INIT=y
+CONFIG_UNWINDER_FRAME_POINTER=y
 CONFIG_KEYS=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
